# CS6235Summer

./: .gitmodules  CMakeLists.txt  GSRBBricks.cpp  GSRBBricks.cu  GSRBBricks.h  GSRBConstants.h  GSRBCuda.cu  GSRBCuda.h  README.md  gsrb.c  gsrb_bricks.cpp  gsrb_generated.cpp  main.cpp  main.cu
bricknew/: .gitignore  README.md  runknl.sh  runp100.sh  runskx.sh  vecscatter
bricknew/common/: brick-cuda.h  brick.h  bricksetup.cpp  bricksetup.h  cmpconst.h  cudaarray.h  cutiming.h  defs.h  getsize.sh  head.h  headcu.h  multiarray.cpp  multiarray.h  rnghelp.cpp  rnghelp.h  timing.h  vecscatter.h
bricknew/schedules/2d/: arrcusched.h  arrsched.h  bricusched.h  brisched.h  vssched.h
bricknew/schedules/3d/: arrcusched.h  arrsched.h  bricusched.h  brisched.h  vssched.h
bricknew/st/codegen/backend/: __init__.py  base.py  cuda.py
bricknew/stencils/: Makefile  Makefile.gpu  Makefile.knl  Makefile.skx
bricknew/stencils/GSRB/: Makedef.gpu  cuda-mem  kernel.h  kernel.py  setup-trans.cu  setup.cu  setup.sh
bricknew/stencils/chebyshev/: kernel.h  setup.cpp  setup.cu
bricknew/stencils/derivative/: kernel.h
bricknew/stencils/diffterm/: kernel.h  kernel.py  kernel1.h  kernel1.py  kernel2.h  kernel2.py  kernel3.h  kernel3.py  kernel4.h  kernel4.py  kernel5.h  kernel5.py  setup.cpp  setup.cu
bricknew/stencils/f2d25pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/f2d49pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/f2d64pt/: Makedef.skx
bricknew/stencils/f2d81pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/f2d9pt/: kernel.h  kernel.py
bricknew/stencils/f3d125pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/f3d27pt/: Makefile  kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/helmholtz2/: kernel.py  setup.cpp
bricknew/stencils/helmholtz4/: kernel.h  kernel.py  setup.cu
bricknew/stencils/hypterm/: Makedef.knl  kernel.h  kernel.py  setup.cpp  setup.cu  vecscatter.h
bricknew/stencils/poisson/: Makedef.knl  Makefile  kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s2d13pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s2d17pt/: Makefile  kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s2d21pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s2d25pt/: kernel.h  kernel.py
bricknew/stencils/s2d29pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s2d33pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s2d5pt/: Makefile  kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s2d9pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s3d13pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s3d19pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s3d25pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s3d31pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s3d37pt/: Makefile  kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s3d43pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s3d49pt/: kernel.h  kernel.py  setup.cpp  setup.cu
bricknew/stencils/s3d7pt/: Makedef.knl  kernel.h  kernel.py  setup.cpp  setup.cu
ztuowen-bricklib-0ea565954a21/: .gitignore  CMakeLists.txt  Makefile  README.md  cuda-main.cpp  main.cpp  mpi-main.cpp  san-check.cpp
ztuowen-bricklib-0ea565954a21/inc/: brick-cuda.h  brick-mpi.h  brick.h  brick_cpp.h  brick_rect.h
ztuowen-bricklib-0ea565954a21/src/: brick.cpp  brick_rect.cpp
ztuowen-bricklib-0ea565954a21/src/cuda/: brick-cuda.cpp
ztuowen-bricklib-0ea565954a21/src/mpi/: brick-mpi.cpp
ztuowen-bricklib-0ea565954a21/stencils/: cns.cpp  cns_const.h  example.h  iso3dfd.cpp  iso3dfd_cuda.cu  iso3dfd_cuda.h  iso3dfd_generated.cpp  other_example.cpp  stencil_example.cpp
